concepts/examples/leo_demo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: leo-demo-service
spec:
  selector:
    app: leoflaskdemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
